feat: change icons for quality guarantees

--- a/quality-guarantees/quality-guarantee1/index.mdx
+++ b/quality-guarantees/quality-guarantee1/index.mdx
@@ -1,4 +1,4 @@
 ---
-text: "Intervention rapide 7j/7, jours fériés et dimanches"
+text: "Intervention rapide 7j/7, jours fériés et dimanche"
 icon: "./icon.png"
 ---
