feat: update icons and text for services

--- a/services/service3/index.mdx
+++ b/services/service3/index.mdx
@@ -1,5 +1,5 @@
 ---
-text: "Accès difficiles et grandes hauteurs"
+text: "Lutte contre les chenilles processionnaires"
 icon: "./icon.png"
-alt: "ladder icon"
+alt: "caterpillar icon"
 ---
