--- a/services/service2/index.mdx
+++ b/services/service2/index.mdx
@@ -1,5 +1,5 @@
 ---
-text: "Lutte contre les chenilles processionnaires"
+text: "Récupération de nids et d’essaims d’abeilles"
 icon: "./icon.png"
-alt: "caterpillar icon"
+alt: "beehive icon"
 ---
