feat: add instagram posts

--- a/services/service1/index.mdx
+++ b/services/service1/index.mdx
@@ -1,5 +1,6 @@
 ---
-text: "Destruction de nids de guêpe, frelons, et frelons asiatiques"
+text: "Lutte contre les chenilles processionnaires"
 icon: "./icon.png"
-alt: "wasp icon"
+order: 3
+alt: "caterpillar icon"
 ---
