--- a/services/service3/index.mdx
+++ b/services/service3/index.mdx
@@ -1,5 +1,6 @@
 ---
-text: "Lutte contre les chenilles processionnaires"
+text: "Destruction de nids de guêpe, frelons, et frelons asiatiques"
 icon: "./icon.png"
-alt: "caterpillar icon"
+order: 1
+alt: "wasp icon"
 ---
